examples/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /test
        backend:
          serviceName: my-service
          servicePort: 80
